--- a/public/css/material-kit.css
+++ b/public/css/material-kit.css
@@ -22,7 +22,7 @@
 }
 
 html {
-    font-family: sans-serif;
+    font-family: "B Yekan";
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
@@ -50,7 +50,7 @@ section {
 
 body {
     margin: 0;
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-family: "B Yekan", "Arial", sans-serif;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -454,7 +454,7 @@ section {
 
 body {
     margin: 0;
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-family: "B Yekan", sans-serif;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -5640,7 +5640,7 @@ button.close {
     z-index: 1070;
     display: block;
     margin: 0;
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-family: "B Yekan"; sans-serif;
     font-style: normal;
     font-weight: 400;
     line-height: 1.5;
@@ -5765,7 +5765,7 @@ button.close {
     z-index: 1060;
     display: block;
     max-width: 276px;
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-family: "B Yekan", sans-serif;
     font-style: normal;
     font-weight: 400;
     line-height: 1.5;
@@ -10901,7 +10901,7 @@ legend {
 }
 
 .serif-font {
-    font-family: "Roboto Slab", "Times New Roman", serif;
+    font-family: "B Yekan", serif;
 }
 
 * {
@@ -14854,7 +14854,7 @@ h6,
 .h2,
 .h3,
 .h4 {
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-family: "B Yekan"; sans-serif;
     font-weight: 300;
     line-height: 1.5em;
 }
@@ -14945,7 +14945,7 @@ small,
 .footer-big h4,
 .media .media-heading {
     font-weight: 700;
-    font-family: "Roboto Slab", "Times New Roman", serif;
+    font-family: "B Yekan", serif;
 }
 
 .title,
